Fix language name overflow on its flag
The language name, if too long, will now overflow
out of the card frame instead of the flag image.
It’s not ideal, but at least it looks a bit better.

--- a/webroot/css/sentences/index.css
+++ b/webroot/css/sentences/index.css
@@ -55,6 +55,10 @@ img.centered-logo {
   display: table-cell;
   vertical-align: middle;
 }
+svg.language-icon {
+  width: 30px;
+  height: 20px;
+}
 
 .lang1  { top: 0;   right: 60%; }
 .lang2  { top: 0;    left: 60%; }
